fix: Prevent home catalog image stretching

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -56,6 +56,7 @@
 .slider-content img {
     max-width: 100%;
     height: 400px;
+	object-fit: contain;
 }
 
 .slider-nav {
